Add node_test project files

--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "start": "node app.js"
   },
   "author": "Abdul Haseeb",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
